# meetixos

./: .gitignore  Cargo.toml  Makefile  README.md  config.make  config.mk  rustfmt.toml
Kernel/: Cargo.toml  Makefile
Kernel/HHLoader/: Cargo.toml
Kernel/HHLoader/Targets/x86_64/: hh_loader.json
Kernel/HHLoader/src/: log.rs  main.rs  panic.rs  symbols.rs
Kernel/HHLoader/src/info/: info.rs  mem_area.rs
Kernel/HHLoader/src/loader/: cache.rs  elf.rs  mod.rs  stack.rs
Kernel/SharedCode/: Cargo.toml
Kernel/SharedCode/src/: dbg.rs  lib.rs  random.rs  uart.rs
Kernel/SharedCode/src/addr/: mod.rs
Kernel/SharedCode/src/info/: args.rs  descriptor.rs  vm_layout.rs
Kernel/SharedCode/src/interrupt/: manager.rs
Kernel/SharedCode/src/logger/: logger.rs  mod.rs  writers.rs
Kernel/SharedCode/src/mem/: bitmap.rs
Kernel/Targets/riscv/: kernel.json  linker.ld
Kernel/Targets/x86_64/: kernel.json  linker.ld
Kernel/src/: boot_info.rs  cmdline.rs  cpu.rs  dbg_print.rs  heap.rs  info.rs  main.rs  panic.rs  processor.rs  symbols.rs  version.rs
Kernel/src/addr/: mod.rs  phys.rs  phys_addr.rs  virt.rs  virt_addr.rs
Kernel/src/arch/aarch64/: mod.rs
Kernel/src/arch/x86_64/: acpi.rs  acpi_manager.rs  apic_manager.rs  cpu.rs  desc_table.rs  gdt.rs  global_desc_table.rs  hw_boot_info.rs  hw_cpu.rs  hw_cpu_core.rs  idt.rs  info.rs  intr_desc_table.rs  intr_handler.rs  intr_service_routines.S  io_port.rs  kernel_start.S  local_apic.rs  mod.rs  ms_register.rs  pic.rs  pit.rs  task_state_segment.rs  tss.rs  x64_port.rs
Kernel/src/dbg/: display.rs  display_pretty.rs  mod.rs  print.rs
Kernel/src/dev/: adapters.rs  mod.rs  random.rs  uart.rs
Kernel/src/filesystem/: loaded_nodes.rs  mod.rs  node_structs.rs  path_structs.rs
Kernel/src/filesystem/implementation/: mod.rs
Kernel/src/filesystem/virtual/: inode.rs  mod.rs
Kernel/src/interrupt/: mod.rs
Kernel/src/log/: locked.rs  mod.rs  writer.rs
Kernel/src/mem/: heap.rs  mod.rs  vm_layout.rs
Kernel/src/mem/paging/: mod.rs
Kernel/src/mem/phys/: allocator.rs  bitmap.rs  mod.rs
Kernel/src/mem/virt/: mod.rs
Kernel/src/task/: mod.rs  process.rs  thread.rs
Kernel/src/task/scheduler/: mod.rs  real_time.rs  round_robin.rs
Kernel/src/vm/: layout_manager.rs  mem_manager.rs  mod.rs  page_dir.rs  page_table.rs  page_table_entry.rs
Kernel/src/vm/paging/: mod.rs  page_table.rs  page_table_entry.rs
NewKernel/: Cargo.toml  Makefile
NewKernel/Targets/x86_64/: linker.ld
NewKernel/src/: main.rs  panic.rs
NewKernel/src/arch/: mod.rs
NewKernel/src/arch/aarch64/: kernel_start.S
NewKernel/src/arch/riscv/: kernel_start.S  mod.rs
NewKernel/src/arch/x86_64/: kernel_start.S  mod.rs
OldKernel/: Cargo.toml  Makefile
OldKernel/HHLoader/: Cargo.toml
OldKernel/HHLoader/Targets/aarch64/: hh_loader.json
OldKernel/HHLoader/Targets/riscv/: hh_loader.json  linker.ld
OldKernel/HHLoader/Targets/x86_64/: hh_loader.json  linker.ld
OldKernel/HHLoader/src/: main.rs  panic.rs  symbols.rs
OldKernel/HHLoader/src/arch/: mod.rs
OldKernel/HHLoader/src/info/: info.rs  mod.rs
OldKernel/HHLoader/src/loader/: cache.rs  elf.rs  mod.rs  stack.rs
OldKernel/SharedCode/src/: elf.rs  lib.rs  random.rs  uart.rs
OldKernel/SharedCode/src/addr/: mod.rs
OldKernel/SharedCode/src/info/: args.rs  descriptor.rs  vm_layout.rs
OldKernel/SharedCode/src/logger/: logger.rs  mod.rs  writers.rs
OldKernel/SharedCode/src/mem/: bitmap.rs  mod.rs
OldKernel/Targets/aarch64/: kernel.json  linker.ld
OldKernel/Targets/riscv/: kernel.json
OldKernel/Targets/x86_64/: kernel.json
OldKernel/src/: main.rs  panic.rs  symbols.rs  version.rs
OldKernel/src/interrupt/: mod.rs
OldKernel/src/log/: mod.rs  writer.rs
OldKernel/src/mem/: heap.rs  mod.rs  vm_layout.rs
OldKernel/src/mem/paging/: mod.rs
OldKernel/src/mem/phys/: allocator.rs  mod.rs
UKLibs/LibApi/: Cargo.toml
UKLibs/LibApi/src/: caller.rs  config.rs  lib.rs  path.rs  time.rs
UKLibs/LibApi/src/bits/: path.rs
UKLibs/LibApi/src/ents/: config.rs  entity.rs  mod.rs
UKLibs/LibApi/src/errors/: class.rs  error.rs  mod.rs
UKLibs/LibApi/src/objs/: config.rs  mod.rs  object.rs
UKLibs/LibApi/src/tasks/: config.rs  mod.rs  task.rs
UKLibs/LibApiData/: Cargo.toml
UKLibs/LibApiData/src/: instant.rs  lib.rs  limit.rs  path.rs
UKLibs/LibApiData/src/ent/: config.rs  mod.rs  types.rs
UKLibs/LibApiData/src/entity/: config.rs  mod.rs  types.rs
UKLibs/LibApiData/src/error/: class.rs  mod.rs
UKLibs/LibApiData/src/object/: config.rs  device.rs  dir.rs  grants.rs  info.rs  mod.rs  modes.rs  types.rs  uses.rs
UKLibs/LibHeap/: Cargo.toml
UKLibs/LibHeap/src/: lazy_locked_heap.rs  lib.rs  linked_list.rs  locked.rs  slab.rs
UKLibs/LibOS/: Cargo.toml
UKLibs/LibOS/src/: lib.rs  limits.rs
Userland/UsrLibs/LibApi/: Cargo.toml
Userland/UsrLibs/LibMxStd/: Cargo.toml
Userland/UsrLibs/LibRt/: Cargo.toml
kernel/: Cargo.toml  Makefile
kernel/hh_loader/: Cargo.toml
kernel/hh_loader/src/: interrupt.rs  loader.rs  log.rs  main.rs  panic.rs  phys_mem.rs  symbols.rs  version.rs  vm_layout.rs
kernel/shared/: Cargo.toml
kernel/shared/src/: dbg.rs  lib.rs  logger.rs  os.rs  random.rs
kernel/src/: boot_info.rs  debug.rs  interrupt.rs  log.rs  main.rs  panic.rs  symbols.rs  version.rs
kernel/src/interrupt/: mod.rs
kernel/src/log/: locked.rs  mod.rs  writer.rs
kernel/src/mem/: frame_allocators.rs  heap.rs  mod.rs  paging.rs  phys.rs
kernel/targets/aarch64/: kernel.json
kernel/targets/riscv/: kernel.json
kernel/targets/x86_64/: kernel.json  linker.ld
libs/api/: Cargo.toml
libs/api/src/: caller.rs  config.rs  lib.rs  namespace.rs  path.rs  time.rs
libs/macros/: Cargo.toml
libs/macros/src/: count_reps.rs  ext_bitflags.rs  lib.rs
src/kernel/: Cargo.toml  build.rs  linker.ld
src/kernel/hal/: Cargo.toml
src/kernel/hh_loader/: Cargo.toml
src/kernel/shared/: Cargo.toml
src/kernel/src/: debug.rs  interrupt.rs  log.rs  main.rs  panic.rs
src/lib/api/: Cargo.toml
src/lib/heap/: Cargo.toml
src/libs/heap/: Cargo.toml
src/libs/macros/: Cargo.toml
(+603 files in other folders)
