[workspace]
members = [
    # Kernel Crates
    "Kernel",
    "OldKernel",
    "OldKernel/HHLoader",
    "OldKernel/SharedCode",
    # Userland/OldKernel Libraries
    "UKLibs/LibApiData",
    "UKLibs/LibBits",
    "UKLibs/LibHeap",
    "UKLibs/LibHelps",
    "UKLibs/LibSymbols",
    "UKLibs/LibSync",
    # Userland Libraries
    "Userland/UsrLibs/LibApi",
    "Userland/UsrLibs/LibRt",
    "Userland/UsrLibs/LibMxStd",
    # App Crates
    "Userland/Apps/ExampleApp",
    # Binary Crates
    "Userland/Bins/Example",
]
