[workspace]
members = [
    # Kernel Crates
    "Kernel",
    # Userland/Kernel Libraries
    "UKLibs/LibApiData",
    "UKLibs/LibBits",
    "UKLibs/LibHeap",
    "UKLibs/LibHelps",
    "UKLibs/LibSymbols",
    "UKLibs/LibSync",
    # Userland Libraries
    "Userland/UsrLibs/LibApi",
    "Userland/UsrLibs/LibRt",
    "Userland/UsrLibs/LibMxStd",
    # App Crates
    "Userland/Apps/ExampleApp",
    # Binary Crates
    "Userland/Bins/Example",
]

[profile.dev]
opt-level = 2 # MUST >= 2 : Enable RVO to avoid stack overflow