[package]
name = "kernel"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

[dependencies]
# ------------------------------ MeetiX Libraries Crates ------------------------------- #
bits     = { path = "../UKLibs/LibBits" }
heap     = { path = "../UKLibs/LibHeap" }
sync     = { path = "../UKLibs/LibSync" }
helps    = { path = "../UKLibs/LibHelps" }
symbols  = { path = "../UKLibs/LibSymbols" }
api_data = { path = "../UKLibs/LibApiData" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
# ------------------------ External x86_64 Thirdy Party Crates ------------------------- #
multiboot2 = "*"
