[package]
name = "kernel"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

[dependencies]
# -------------------------------- Kernel Private Crates ------------------------------- #
shared = { path = "shared" }

# ---------------------------- External Thirdy Party Crates ---------------------------- #
bit_field = "*"

# ------------------------------ MeetiX Libraries Crates ------------------------------- #
api  = { path = "../libs/api",  features = ["enable_kernel_methods"] }
heap = { path = "../libs/heap", features = ["disable_locked"] }
sync = { path = "../libs/sync" }
