[package]
name = "shared"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

[dependencies]
# ---------------------------- External Thirdy Party Crates ---------------------------- #
log       = "*"
xmas-elf  = "*"
num_enum  = { version = "*", default-features = false}

# ------------------------------ MeetiX Libraries Crates ------------------------------- #
os     = { path = "../../UKLibs/LibOS" }
bits   = { path = "../../UKLibs/LibBits" }
helps  = { path = "../../UKLibs/LibHelps" }

