[package]
name = "heap"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

[dependencies]
# ---------------------------- External Thirdy Party Crates ---------------------------- #
num_enum = { version = "*", default-features = false }

# ------------------------------ MeetiX Libraries Crates ------------------------------- #
api   = { path = "../LibApi", optional = true }
sync  = { path = "../LibSync" }
helps = { path = "../LibHelps" }

[features]
disable_locked = []
default        = ["api"]
