[package]
name = "hh_loader"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

##
# Kernel Crates
##

[dependencies.shared]
path = "../shared"

##
# External x86_64 Crates
##

[target.'cfg(target_arch = "x86_64")'.dependencies.multiboot2]
version = "0.10.1"

[target.'cfg(target_arch = "x86_64")'.dependencies.x86_64]
version = "0.14.2"