[package]
name = "shared"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

##
# External Crates
##

[dependencies.bit_field]
version = "0.10.1"

[dependencies.log]
version = "0.4.14"

[dependencies.num_enum]
version = "0.5.1"
default-features = false

[dependencies.xmas-elf]
version = "0.7.0"

##
# External aarch64 Crates
##

[target.'cfg(target_arch = "aarch64")'.dependencies.aarch64]
version = "0.0.5"

##
# External riscv Crates
##

[target.'cfg(target_arch = "riscv")'.dependencies.riscv]
version = "0.6.0"

##
# External x86_64 Crates
##

[target.'cfg(target_arch = "x86_64")'.dependencies.x86_64]
version = "0.14.1"

[target.'cfg(target_arch = "x86_64")'.dependencies.uart_16550]
version = "0.2.12"

##
# MeetiX Libraries Crates
##

[dependencies.os]
path = "../../libs/os"

[dependencies.macros]
path = "../../libs/macros"
