[package]
name = "shared"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

[dependencies]
# ---------------------------- External Thirdy Party Crates ---------------------------- #
log       = "*"
xmas-elf  = "*"
bit_field = "*"
num_enum  = { version = "*", default-features = false}

# ------------------------------ MeetiX Libraries Crates ------------------------------- #
os     = { path = "../../libs/os" }
macros = { path = "../../libs/macros" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ------------------------ External aarch64 Thirdy Party Crates ------------------------ #
aarch64 = "*"

[target.'cfg(target_arch = "riscv")'.dependencies]
# ------------------------ External riscv Thirdy Party Crates -------------------------- #
riscv = "*"

[target.'cfg(target_arch = "x86_64")'.dependencies]
# ------------------------ External x86_64 Thirdy Party Crates ------------------------- #
x86_64     = "*"
uart_16550 = "*"
