[package]
name = "macros"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

[dependencies]
# ---------------------------- External Thirdy Party Crates ---------------------------- #
bitflags = "*"
paste    = "*"
num_enum = { version = "*", default-features = false }

# ------------------------------ MeetiX Libraries Crates ------------------------------- #
sync = { path = "../sync" }
