[package]
name = "kernel"
version = "0.1.0"
authors = ["Marco Cicognani <marco.cicognani@btstore.com>"]
edition = "2018"

##
# Kernel Crates
##

[dependencies.hal]
path = "hal"

##
# External Crates
##

[dependencies.log]
version = "0.4.14"

[dependencies.bit_field]
version = "0.10.1"

##
# MeetiX Libraries Crates
##

[dependencies.api]
path = "../lib/api"
features = ["enable_kernel_methods"]

[dependencies.heap]
path = "../lib/heap"
features = ["disable_locked"]

[dependencies.sync]
path = "../lib/sync"
