[package]
name = "kernel"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

##
# Kernel Crates
##

[dependencies.hal]
path = "libs/hal"
features = ["kernel_stage"]

[dependencies.logger]
path = "libs/logger"
features = ["heap_buffering"]

[dependencies.bitmap_allocator]
path = "libs/bitmap_allocator"

[dependencies.dbg_utils]
path = "libs/dbg_utils"

##
# External Crates
##

[dependencies.bit_field]
version = "0.10.1"

##
# MeetiX Libraries Crates
##

[dependencies.api]
path = "../libs/api"
features = ["enable_kernel_methods"]

[dependencies.heap]
path = "../libs/heap"
features = ["disable_locked"]

[dependencies.sync]
path = "../libs/sync"
