[package]
name = "kernel"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

##
# Kernel Crates
##

[dependencies.shared]
path = "shared"

##
# External Crates
##

[dependencies.bit_field]
version = "0.10.1"

##
# MeetiX Libraries Crates
##

[dependencies.api]
path = "../libs/api"
features = ["enable_kernel_methods"]

[dependencies.heap]
path = "../libs/heap"
features = ["disable_locked"]

[dependencies.sync]
path = "../libs/sync"
