[package]
name = "hal"
version = "0.1.0"
authors = ["Marco Cicognani <marco.cicognani@btstore.com>"]
edition = "2018"

##
# External Crates
##

[dependencies.bit_field]
version = "0.10.1"

##
# External aarch64 Crates
##

[target.'cfg(target_arch = "aarch64")'.dependencies.aarch64]
version = "0.0.5"

##
# External riscv Crates
##

[target.'cfg(target_arch = "riscv")'.dependencies.riscv]
version = "0.6.0"

##
# External x86_64 Crates
##

[target.'cfg(target_arch = "x86_64")'.dependencies.x86_64]
version = "0.14.0"

[target.'cfg(target_arch = "x86_64")'.dependencies.multiboot2]
version = "0.10.1"

[target.'cfg(target_arch = "x86_64")'.dependencies.uart_16550]
version = "0.2.12"

##
# MeetiX Libraries Crates
##

[dependencies.os]
path = "../../lib/os"

[dependencies.macros]
path = "../../lib/macros"