[package]
name = "hh_loader"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

##
# Kernel Crates
##

[dependencies.hal]
path = "../libs/hal"

[dependencies.logger]
path = "../libs/logger"

##
# MeetiX Libraries Crates
##

[dependencies.sync]
path = "../../libs/sync"