[package]
name = "hh_loader"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

##
# Kernel Crates
##

[dependencies.hal]
path = "../libs/hal"
features = ["loader_stage"]

[dependencies.logger]
path = "../libs/logger"

[dependencies.bitmap_allocator]
path = "../libs/bitmap_allocator"

[dependencies.dbg_utils]
path = "../libs/dbg_utils"

##
# MeetiX Libraries Crates
##

[dependencies.sync]
path = "../../libs/sync"