[package]
name = "heap"
version = "0.1.0"
authors = ["marco <marco.cicognani@btstore.com>"]
edition = "2018"

##
# External Crates
##

[dependencies.linked_list_allocator]
version = "0.8.11"
# we don't need default features since it is used only the internal hole module
default-features = false

##
# MeetiX Libraries Crates
##

[dependencies.api]
path = "../api"
optional = true

[dependencies.macros]
path = "../macros"

[dependencies.sync]
path = "../sync"

[features]
disable_locked = []
default = ["api"]
