[package]
name = "heap"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

##
# External Crates
##

[dependencies.linked_list_allocator]
version = "0.8.11"
# we don't need default features since it is used only the internal hole module
default-features = false

[dependencies.num_enum]
version = "0.5.1"

##
# MeetiX Libraries Crates
##

[dependencies.api]
path = "../api"
optional = true

[dependencies.sync]
path = "../sync"

[features]
disable_locked = []
default = ["api"]
