[package]
name = "bitmap_allocator"
version = "0.1.0"
edition = "2018"
authors = ["Marco Cicognani <marco.cicognani@meetixos.org>"]

##
# Kernel Crates
##

[dependencies.hal]
path = "../hal"

##
# External Crates
##

[dependencies.bit_field]
version = "0.10.1"

##
# MeetiX Libraries Crates
##

[dependencies.sync]
path = "../../../libs/sync"